--- a/Labs/AIND-Simulated_Annealing/AIND-Simulated_Annealing.ipynb
+++ b/Labs/AIND-Simulated_Annealing/AIND-Simulated_Annealing.ipynb
@@ -2,10 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "# I. Introduction\n",
     "\n",
@@ -17,10 +14,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "## Overview\n",
     "\n",
@@ -34,12 +28,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import json\n",
@@ -56,12 +46,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
     "\"\"\"Read input data and define helper functions for visualization.\"\"\"\n",
@@ -89,10 +75,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "## II. Simulated Annealing -- Main Loop\n",
     "\n",
@@ -101,12 +84,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def simulated_annealing(problem, schedule):\n",
@@ -148,16 +127,25 @@
     "    AIMA simulated_annealing() pseudocode\n",
     "        https://github.com/aimacode/aima-pseudocode/blob/master/md/Simulated-Annealing.md\n",
     "    \"\"\"     \n",
-    "    raise NotImplementedError\n",
+    "    t = 1\n",
+    "    current_state = problem\n",
+    "    while (True):\n",
+    "        temp = schedule(t)\n",
+    "        if temp < 1e-10:\n",
+    "            return current\n",
+    "        \n",
+    "        next_state = random.choice(current.successors())\n",
+    "        diff = current_state.get_value() - next_state.get_value()\n",
+    "        if diff >= 0 or random.uniform() <= np.exp(diff/temp):\n",
+    "            current_state = next_state\n",
+    "        \n",
+    "        t += 1    \n",
     "    "
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "## III. Representing the Problem\n",
     "\n",
@@ -168,9 +156,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -268,10 +254,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "### Testing TravelingSalesmanProblem\n",
     "The following tests should validate the class constructor and functionality of the `successors()` and `get_value()` methods."
@@ -280,11 +263,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Construct an instance of the TravelingSalesmanProblem\n",
@@ -296,11 +275,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Test the successors() method -- no output means the test passed\n",
@@ -315,11 +290,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Test the get_value() method -- no output means the test passed\n",
@@ -328,10 +299,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "## IV. Define the Temperature Schedule\n",
     "\n",
@@ -348,11 +316,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# These are presented as globals so that the signature of schedule()\n",
@@ -369,10 +333,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "### Testing the Temperature Schedule\n",
     "The following tests should validate the temperature schedule function and perform a simple test of the simulated annealing function to solve a small TSP test case"
@@ -381,11 +342,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# test the schedule() function -- no output means that the tests passed\n",
@@ -397,11 +354,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Failure implies that the initial path of the test case has been changed\n",
@@ -415,10 +368,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "## V. Run Simulated Annealing on a Larger TSP\n",
     "Now we are ready to solve a TSP on a bigger problem instance by finding a shortest-path circuit through several of the US state capitals.\n",
@@ -429,11 +379,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Create the problem instance and plot the initial state\n",
@@ -448,11 +394,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# set the decay rate and initial temperature parameters, then run simulated annealing to solve the TSP\n",
@@ -466,10 +408,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "### Experiments (Optional)\n",
     "Here are some ideas for additional experiments with various settings and parameters once you've completed the lab.\n",
@@ -487,7 +426,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
@@ -501,7 +440,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.5.4"
   }
  },
  "nbformat": 4,
