--- a/Labs/AIND2-DL/IMDB_In_Keras.ipynb
+++ b/Labs/AIND2-DL/IMDB_In_Keras.ipynb
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -270,18 +270,14 @@
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "dense_1 (Dense)              (None, 20000)             20020000  \n",
+      "dense_7 (Dense)              (None, 512)               512512    \n",
       "_________________________________________________________________\n",
-      "dropout_1 (Dropout)          (None, 20000)             0         \n",
+      "dropout_4 (Dropout)          (None, 512)               0         \n",
       "_________________________________________________________________\n",
-      "dense_2 (Dense)              (None, 10000)             200010000 \n",
-      "_________________________________________________________________\n",
-      "dropout_2 (Dropout)          (None, 10000)             0         \n",
-      "_________________________________________________________________\n",
-      "dense_3 (Dense)              (None, 2)                 20002     \n",
+      "dense_8 (Dense)              (None, 2)                 1026      \n",
       "=================================================================\n",
-      "Total params: 220,050,002.0\n",
-      "Trainable params: 220,050,002.0\n",
+      "Total params: 513,538.0\n",
+      "Trainable params: 513,538.0\n",
       "Non-trainable params: 0.0\n",
       "_________________________________________________________________\n"
      ]
@@ -290,14 +286,14 @@
    "source": [
     "# TODO: Build the model architecture\n",
     "model = Sequential()\n",
-    "model.add(Dense(20000, activation='relu', input_shape=(1000,)))\n",
-    "model.add(Dropout(.2))\n",
-    "model.add(Dense(10000, activation='relu'))\n",
-    "model.add(Dropout(.1))\n",
+    "model.add(Dense(512, activation='relu', input_shape=(1000,)))\n",
+    "model.add(Dropout(.5))\n",
+    "#model.add(Dense(10, activation='relu'))\n",
+    "#model.add(Dropout(.5))\n",
     "model.add(Dense(2, activation='softmax'))\n",
     "\n",
     "# TODO: Compile the model using a loss function and an optimizer.\n",
-    "model.compile(loss='categorical_crossentropy', optimizer='adam', metrics=['accuracy'])\n",
+    "model.compile(loss='categorical_crossentropy', optimizer='ADAM', metrics=['accuracy'])\n",
     "model.summary()"
    ]
   },
@@ -314,16 +310,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false,
     "deletable": true,
-    "editable": true
+    "editable": true,
+    "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/10\n",
+      "10s - loss: 0.3860 - acc: 0.8262\n",
+      "Epoch 2/10\n",
+      "10s - loss: 0.3070 - acc: 0.8685\n",
+      "Epoch 3/10\n",
+      "10s - loss: 0.2659 - acc: 0.8886\n",
+      "Epoch 4/10\n",
+      "10s - loss: 0.2131 - acc: 0.9161\n",
+      "Epoch 5/10\n",
+      "10s - loss: 0.1569 - acc: 0.9412\n",
+      "Epoch 6/10\n",
+      "10s - loss: 0.1028 - acc: 0.9654\n",
+      "Epoch 7/10\n",
+      "10s - loss: 0.0701 - acc: 0.9771\n",
+      "Epoch 8/10\n",
+      "10s - loss: 0.0534 - acc: 0.9824\n",
+      "Epoch 9/10\n",
+      "10s - loss: 0.0447 - acc: 0.9858\n",
+      "Epoch 10/10\n",
+      "11s - loss: 0.0412 - acc: 0.9855\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.callbacks.History at 0x14e4cab4ba8>"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# TODO: Run the model. Feel free to experiment with different batch sizes and number of epochs.\n",
-    "model.fit(x_train, y_train, epochs=500, batch_size=100, verbose=0)"
+    "model.fit(x_train, y_train, epochs=10, batch_size=32, verbose=2)"
    ]
   },
   {
@@ -339,13 +373,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy:  0.855\n"
+     ]
+    }
+   ],
    "source": [
     "score = model.evaluate(x_test, y_test, verbose=0)\n",
     "print(\"Accuracy: \", score[1])"
