--- a/Projects/dog-project/dog_app.ipynb
+++ b/Projects/dog-project/dog_app.ipynb
@@ -730,7 +730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -769,16 +769,26 @@
     "\n",
     "### TODO: specify the number of epochs that you would like to use to train the model.\n",
     "\n",
-    "epochs = ...\n",
+    "epochs = 20\n",
+    "\n",
+    "from keras.preprocessing.image import ImageDataGenerator\n",
+    "\n",
+    "datagen_train = ImageDataGenerator(width_shift_range=0.1, height_shift_range=0.1, horizontal_flip=True)\n",
+    "datagen_train.fit(train_tensors)\n",
     "\n",
     "### Do NOT modify the code below this line.\n",
     "\n",
     "checkpointer = ModelCheckpoint(filepath='saved_models/weights.best.from_scratch.hdf5', \n",
     "                               verbose=1, save_best_only=True)\n",
     "\n",
-    "model.fit(train_tensors, train_targets, \n",
-    "          validation_data=(valid_tensors, valid_targets),\n",
-    "          epochs=epochs, batch_size=20, callbacks=[checkpointer], verbose=1)"
+    "model.fit_generator(datagen_train.flow(train_tensors, train_targets, batch_size=20),\n",
+    "                    steps_per_epoch=train_tensors.shape[0] // 20, epochs=epochs,\n",
+    "                    verbose=2, callbacks=[checkpointer], validation_data=(valid_tensors, valid_targets),\n",
+    "                    validation_steps = valid_tensors.shape[0] // 20)\n",
+    "\n",
+    "#model.fit(train_tensors, train_targets, \n",
+    "#          validation_data=(valid_tensors, valid_targets),\n",
+    "#          epochs=epochs, batch_size=20, callbacks=[checkpointer], verbose=1)"
    ]
   },
   {
