--- a/Projects/dog-project/dog_app.ipynb
+++ b/Projects/dog-project/dog_app.ipynb
@@ -351,6 +351,51 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It is not appropriate to use the face detector from OpenCV as a way to detect human images. \n",
+    "\n",
+    "Here is a photo of human that the face detector failed to detect:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img style=\"float:left\" src=\"lfw\\Muhammad_Ali\\Muhammad_Ali_0001.jpg\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here is another photo of dog that the face detector detects a human face:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img style=\"float:left\" src=\"dogImages/train\\095.Kuvasz\\Kuvasz_06442.jpg\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This is because OpenCV face detector relies on extracting and calculating Haar features from each image. The relevant features, such as the region of the eyes is usually darker than the area of nose and cheeks, the eyes are darker than the bridge of the nodes [1]. \n",
+    "\n",
+    "When the human photo above just vaguely shows the right eye, the face detector fails to detect the eyes region related feature so that it fails to detect the face.\n",
+    "\n",
+    "Similarly, the dog photo above resembles the important features for human face detection so that the face detector reports that it detects a face.\n",
+    "\n",
+    "Therefore, OpenCV face detector is not appropriate to be used as a way to detect human images.\n",
+    "\n",
+    "[1] https://www.superdatascience.com/opencv-face-detection"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "deletable": true,
     "editable": true
@@ -1809,10 +1854,10 @@
     "    is_dog = False\n",
     "    img=mpimg.imread(img_path)\n",
     "    \n",
-    "    if face_detector(img_path):\n",
-    "        is_human = True\n",
-    "    elif dog_detector(img_path):\n",
+    "    if dog_detector(img_path):\n",
     "        is_dog = True\n",
+    "    elif face_detector(img_path):\n",
+    "        is_human = True\n",
     "    else:\n",
     "        neither = True\n",
     "        \n",
