--- a/Projects/dog-project/dog_app.ipynb
+++ b/Projects/dog-project/dog_app.ipynb
@@ -1581,7 +1581,12 @@
     "grid = GridSearchCV(estimator=model, param_grid=param_grid, n_jobs=1)\n",
     "grid_result = grid.fit(train_InceptionV3, train_targets)\n",
     "```\n",
-    "The result showed that the combination of Adagrad optmization function and batch size of 20 had the best performance."
+    "The result showed that the combination of Adagrad optmization function and batch size of 20 had the best performance.\n",
+    "\n",
+    "##### Why this structure?\n",
+    "Comparing to the structure in \"Step 3: Create a CNN to Classify Dog Breeds (from Scratch)\", this structure presents similarity in the fully connected and output layers. However, by implementing transfer learning, this structure utilizes the state-of-the-arts convolutional layers structure of InceptionV3 to extract much more and better features from different dog breeds. This features help the fully connected and output layers classify dog breeds with much higer accuracy.\n",
+    "\n",
+    "Comparing to the structure in \"Step 4: Use a CNN to Classify Dog Breeds\", this structure has added 1 hidden layer and 1 dropout layer. As using a different convolutional layers structure which produces different features, the tests showed that the simple structure in Step 4 became overfitting very quickly. By adding the hidden and dropout layers, overfitting was supressed and generalization error was minimized."
    ]
   },
   {
@@ -2211,6 +2216,21 @@
    "source": [
     "dog_breed_predictor_resembler('Bird.jpg') \n",
     "#image source: https://www.thenews.com.pk/latest/191431-Believe-it-or-not-these-birds-are-found-in-Pakistan"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The results were better than I expected. However, with this current implementation, the algorithm could present bad results. Ways to improve:\n",
+    "##### Use a better way to detect dog:\n",
+    "If the input is a photo of dog, the current dog detector algorithm return 100% accuracy. However, if the input is a photo of human, there is a 2% chance that the detector returns it is a dog. A better dog detector algorithm shall make the results better.\n",
+    "##### Use a better way to detect human:\n",
+    "If the input is a photo of human, the success rate for current face detector to detect is 98%. If the input is a photo of dog, there is still a 11% chance that the detector dectects a face from it. These results show that it is not very appropriate to use face detector as a means to detect human. A better algorithm is required.\n",
+    "##### Use localization to help capture the features:\n",
+    "Discrimitive localization presented in [1] might be able to help improving the results as well. Localizatin might be used to locate the object before feeding into the algorithm so that other unrelated objects can be filtered out and the image noises can be reduced.\n",
+    "\n",
+    "[1] http://cnnlocalization.csail.mit.edu/Zhou_Learning_Deep_Features_CVPR_2016_paper.pdf"
    ]
   }
  ],
