--- a/Projects/dog-project/dog_app.ipynb
+++ b/Projects/dog-project/dog_app.ipynb
@@ -351,7 +351,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "It is not appropriate to use the face detector from OpenCV as a way to detect human images. \n",
     "\n",
@@ -360,37 +363,73 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "<img style=\"float:left\" src=\"lfw\\Muhammad_Ali\\Muhammad_Ali_0001.jpg\">"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "Here is another photo of dog that the face detector detects a human face:"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "<img style=\"float:left\" src=\"dogImages/train\\095.Kuvasz\\Kuvasz_06442.jpg\">"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "This is because OpenCV face detector relies on extracting and calculating Haar features from each image. The relevant features, such as the region of the eyes is usually darker than the area of nose and cheeks, the eyes are darker than the bridge of the nodes [1]. \n",
     "\n",
-    "When the human photo above just vaguely shows the right eye, the face detector fails to detect the eyes region related feature so that it fails to detect the face.\n",
+    "When the human photo above just vaguely shows the right eye, the face detector fails to detect the eyes region related feature so that it fails to detect the face. Similarly, the dog photo above resembles the important features for human face detection so that the face detector reports that it detects a face.\n",
     "\n",
-    "Similarly, the dog photo above resembles the important features for human face detection so that the face detector reports that it detects a face.\n",
+    "Therefore, OpenCV face detector is not appropriate to be used as a way to detect human images and a new algorithm is required."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "I think one way to develop the new algorithm is to build a model of Deep Convolutional Neural Network. This model accepts human and non human photos as input and it has one or two outputs. \n",
     "\n",
-    "Therefore, OpenCV face detector is not appropriate to be used as a way to detect human images.\n",
+    "When there is one output, it presents the probability that the input photo is of human. Softmax will be used as the loss function. \n",
     "\n",
+    "When there are two outputs, one output presents the probability that the input photo is of human and the other output presents the probability that the input photo is of non human. Cross entropy is used as the loss function.\n",
+    "\n",
+    "The model can be build from scratch or we can build it based on other widely available and well trained (using ImageNet) models, such as VGG-16, ResNet, InceptionV3, by implementing transfer learning. I want to discuss the approach of tranfer learning. \n",
+    "\n",
+    "As human is not one of the 1000 categories of ImageNet, I consider that we will in the case of: new data is small and new data is different from original training data. As shown in section 27 of Lesson 6 Convolutional Neural Networks, the following steps will be taken to build and train the new model:\n",
+    "1. Pick an existing model and remove its last convolutional layer and all fully connected layers\n",
+    "2. Freeze the pre-trained weights in the remain layers of the existing model\n",
+    "3. Add new fully connected layer(s) to the model with random weights\n",
+    "4. Train the new fully connected layer(s)\n",
+    "\n",
+    "After the training is done, we will have our new human detection algorithm."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "[1] https://www.superdatascience.com/opencv-face-detection"
    ]
   },
@@ -2220,16 +2259,47 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "The results were better than I expected. However, with this current implementation, the algorithm could present bad results. Ways to improve:\n",
     "##### Use a better way to detect dog:\n",
     "If the input is a photo of dog, the current dog detector algorithm return 100% accuracy. However, if the input is a photo of human, there is a 2% chance that the detector returns it is a dog. A better dog detector algorithm shall make the results better.\n",
     "##### Use a better way to detect human:\n",
-    "If the input is a photo of human, the success rate for current face detector to detect is 98%. If the input is a photo of dog, there is still a 11% chance that the detector dectects a face from it. These results show that it is not very appropriate to use face detector as a means to detect human. A better algorithm is required.\n",
-    "##### Use localization to help capture the features:\n",
-    "Discrimitive localization presented in [1] might be able to help improving the results as well. Localizatin might be used to locate the object before feeding into the algorithm so that other unrelated objects can be filtered out and the image noises can be reduced.\n",
+    "If the input is a photo of human, the success rate for current face detector to detect is 98%. If the input is a photo of dog, there is still a 11% chance that the detector dectects a face from it. These results show that it is not very appropriate to use face detector as a means to detect human. A better algorithm is required. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Better dog detector and better human detector algorithms can be combined into one algorithm. The algorithm can be a model of Deep Convolutional Neural Network. The model accepts human, dog and other images as inputs and it has three outputs: one output presents the probability of human, one presents the probability of dog and one presents the probability of neither. Cross entropy is used as the loss function. \n",
     "\n",
+    "The model can be build from scratch or we can build it based on other widely available and well trained (using ImageNet) models, such as VGG-16, ResNet, InceptionV3, by implementing transfer learning. I think transfer learning is a better approach. \n",
+    "\n",
+    "If transfer learning is used, as human is not one of the 1000 categories of ImageNet, I consider that we will in the case of: new data is small and new data is different from original training data. As shown in section 27 of Lesson 6 Convolutional Neural Networks, the following steps will be taken to build and train the new model:\n",
+    "1. Pick an existing model and remove its last convolutional layer and all fully connected layers\n",
+    "2. Freeze the pre-trained weights in the remain layers of the existing model\n",
+    "3. Add new fully connected layer(s) to the model with random weights\n",
+    "4. Train the new fully connected layer(s)\n",
+    "\n",
+    "After the training is done, we will have our new human-dog-neither detection algorithm."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Use localization to help capture the features:\n",
+    "Discrimitive localization presented in [1] might be able to help improving the results as well. Localizatin might be used to locate the object before feeding into the algorithm so that other unrelated objects can be filtered out and the image noises can be reduced."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "[1] http://cnnlocalization.csail.mit.edu/Zhou_Learning_Deep_Features_CVPR_2016_paper.pdf"
    ]
   }
