Simple mode -- small fix

--- a/Projects/aind2-nlp-capstone/machine_translation.ipynb
+++ b/Projects/aind2-nlp-capstone/machine_translation.ipynb
@@ -38,8 +38,6 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/siguma/anaconda3/envs/aind-nlp/lib/python3.6/site-packages/h5py/__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
-      "  from ._conv import register_converters as _register_converters\n",
       "Using TensorFlow backend.\n"
      ]
     }
@@ -79,12 +77,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[name: \"/device:CPU:0\"\n",
+      "[name: \"/cpu:0\"\n",
       "device_type: \"CPU\"\n",
       "memory_limit: 268435456\n",
       "locality {\n",
       "}\n",
-      "incarnation: 1316462749549379174\n",
+      "incarnation: 2621359063960323448\n",
+      ", name: \"/gpu:0\"\n",
+      "device_type: \"GPU\"\n",
+      "memory_limit: 11332668621\n",
+      "locality {\n",
+      "  bus_id: 1\n",
+      "}\n",
+      "incarnation: 13552490180459635386\n",
+      "physical_device_desc: \"device: 0, name: Tesla K80, pci bus id: 0000:00:1e.0\"\n",
       "]\n"
      ]
     }
@@ -224,24 +230,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'the': 1, 'quick': 2, 'a': 3, 'brown': 4, 'fox': 5, 'jumps': 6, 'over': 7, 'lazy': 8, 'dog': 9, 'by': 10, 'jove': 11, 'my': 12, 'study': 13, 'of': 14, 'lexicography': 15, 'won': 16, 'prize': 17, 'this': 18, 'is': 19, 'short': 20, 'sentence': 21}\n",
+      "{'is': 4, 'by': 5, 'of': 6, 'over': 7, 'quick': 1, 'lexicography': 8, 'jove': 9, 'a': 2, 'the': 3, 'dog': 10, 'jumps': 20, 'won': 18, 'lazy': 13, 'fox': 14, 'brown': 15, 'my': 16, 'prize': 17, 'this': 11, 'study': 19, 'sentence': 12, 'short': 21}\n",
       "\n",
       "Sequence 1 in x\n",
       "  Input:  The quick brown fox jumps over the lazy dog .\n",
-      "  Output: [1, 2, 4, 5, 6, 7, 1, 8, 9]\n",
+      "  Output: [3, 1, 15, 14, 20, 7, 3, 13, 10]\n",
       "Sequence 2 in x\n",
       "  Input:  By Jove , my quick study of lexicography won a prize .\n",
-      "  Output: [10, 11, 12, 2, 13, 14, 15, 16, 3, 17]\n",
+      "  Output: [5, 9, 16, 1, 19, 6, 8, 18, 2, 17]\n",
       "Sequence 3 in x\n",
       "  Input:  This is a short sentence .\n",
-      "  Output: [18, 19, 3, 20, 21]\n"
+      "  Output: [11, 4, 2, 21, 12]\n"
      ]
     }
    ],
@@ -286,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -294,14 +300,14 @@
      "output_type": "stream",
      "text": [
       "Sequence 1 in x\n",
-      "  Input:  [1 2 4 5 6 7 1 8 9]\n",
-      "  Output: [1 2 4 5 6 7 1 8 9 0]\n",
+      "  Input:  [ 3  1 15 14 20  7  3 13 10]\n",
+      "  Output: [ 3  1 15 14 20  7  3 13 10  0]\n",
       "Sequence 2 in x\n",
-      "  Input:  [10 11 12  2 13 14 15 16  3 17]\n",
-      "  Output: [10 11 12  2 13 14 15 16  3 17]\n",
+      "  Input:  [ 5  9 16  1 19  6  8 18  2 17]\n",
+      "  Output: [ 5  9 16  1 19  6  8 18  2 17]\n",
       "Sequence 3 in x\n",
-      "  Input:  [18 19  3 20 21]\n",
-      "  Output: [18 19  3 20 21  0  0  0  0  0]\n"
+      "  Input:  [11  4  2 21 12]\n",
+      "  Output: [11  4  2 21 12  0  0  0  0  0]\n"
      ]
     }
    ],
@@ -335,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -403,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -441,9 +447,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train on 110288 samples, validate on 27573 samples\n",
+      "Epoch 1/10\n",
+      "110288/110288 [==============================] - 8s - loss: 2.0527 - acc: 0.5353 - val_loss: 1.4806 - val_acc: 0.6130\n",
+      "Epoch 2/10\n",
+      "110288/110288 [==============================] - 7s - loss: 1.3451 - acc: 0.6309 - val_loss: 1.2415 - val_acc: 0.6444\n",
+      "Epoch 3/10\n",
+      "110288/110288 [==============================] - 7s - loss: 1.1877 - acc: 0.6532 - val_loss: 1.1421 - val_acc: 0.660805 - ETA: 0s - loss: 1.1933 \n",
+      "Epoch 4/10\n",
+      "110288/110288 [==============================] - 7s - loss: 1.1130 - acc: 0.6618 - val_loss: 1.0843 - val_acc: 0.6579\n",
+      "Epoch 5/10\n",
+      "110288/110288 [==============================] - 7s - loss: 1.0630 - acc: 0.6695 - val_loss: 1.0403 - val_acc: 0.6680\n",
+      "Epoch 6/10\n",
+      "110288/110288 [==============================] - 7s - loss: 1.0278 - acc: 0.6762 - val_loss: 1.0050 - val_acc: 0.6835\n",
+      "Epoch 7/10\n",
+      "110288/110288 [==============================] - 7s - loss: 0.9950 - acc: 0.6859 - val_loss: 0.9788 - val_acc: 0.6891\n",
+      "Epoch 8/10\n",
+      "110288/110288 [==============================] - 7s - loss: 0.9674 - acc: 0.6945 - val_loss: 0.9573 - val_acc: 0.7028\n",
+      "Epoch 9/10\n",
+      "110288/110288 [==============================] - 7s - loss: 0.9444 - acc: 0.7022 - val_loss: 0.9306 - val_acc: 0.7122\n",
+      "Epoch 10/10\n",
+      "110288/110288 [==============================] - 7s - loss: 0.9231 - acc: 0.7091 - val_loss: 0.8965 - val_acc: 0.7200\n",
+      "new jersey est parfois calme en mois et il est il est en <PAD> <PAD> <PAD> <PAD> <PAD> <PAD> <PAD> <PAD>\n"
+     ]
+    }
+   ],
    "source": [
     "def simple_model(input_shape, output_sequence_length, english_vocab_size, french_vocab_size):\n",
     "    \"\"\"\n",
@@ -458,6 +493,7 @@
     "    inputs = Input(shape=input_shape[1:])\n",
     "    rnn = GRU(100, return_sequences=True)(inputs)\n",
     "    predictions = Dense(french_vocab_size, activation='softmax')(rnn)\n",
+    "    learning_rate = 0.01\n",
     "    \n",
     "    model = Model(inputs=inputs, outputs=predictions)\n",
     "    model.compile(loss=sparse_categorical_crossentropy,\n",
@@ -474,8 +510,8 @@
     "simple_rnn_model = simple_model(\n",
     "    tmp_x.shape,\n",
     "    max_french_sequence_length,\n",
-    "    english_vocab_size,\n",
-    "    french_vocab_size)\n",
+    "    english_vocab_size+1,\n",
+    "    french_vocab_size+1)\n",
     "simple_rnn_model.fit(tmp_x, preproc_french_sentences, batch_size=1024, epochs=10, validation_split=0.2)\n",
     "\n",
     "# Print prediction(s)\n",
@@ -726,7 +762,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
